fix: Reduced free heap size settings and and configured ZGC as garbage collector