@@ -332,6 +332,10 @@ application {
 		"-XX:+PrintCommandLineFlags",
 		"-XX:MinHeapSize=" + 10 * 1024 * 1024,
 		"-XX:MaxRAMPercentage=80.0",
+		"-XX:MinHeapFreeRatio=5", // default 40%
+		"-XX:MaxHeapFreeRatio=10", // default 70%
+		"-XX:UseZGC",
+		"-XX:+ZGenerational",
 		"-Dorg.jooq.no-logo=true",
 		"-Dorg.jooq.no-tips=true"
 	]
